# effectful-libs

./: .hlint.yaml  .yamllint.yaml  Makefile  README.md  cabal.project  flake.nix  hie.yaml  stack.yaml  stack_lts-18.yaml  stack_lts-19.yaml  stack_nightly.yaml
bench/fs-unix/: fs-unix.cabal
bench/fs-unix/bench/: Main.hs  baseline_9.8.2.csv
effectful-exceptions/: effectful-exceptions.cabal
effectful-exceptions/src/Effectful/: Exception.hs
effectful-exceptions/test/unit/: Main.hs
effectful-fs/: CHANGELOG.md  effectful-fs.cabal
effectful-fs/src/Effectful/FileSystem/: FileReader.hs  FileWriter.hs  HandleReader.hs  HandleWriter.hs  Internal.hs  Path.hs  PathReader.hs  PathWriter.hs
effectful-fs/src/Effectful/FileSystem/FileReader/: Dynamic.hs
effectful-fs/src/Effectful/FileSystem/FileWriter/: Dynamic.hs
effectful-fs/src/Effectful/FileSystem/HandleReader/: Dynamic.hs
effectful-fs/src/Effectful/FileSystem/HandleWriter/: Dynamic.hs
effectful-fs/src/Effectful/FileSystem/PathReader/: Dynamic.hs
effectful-fs/src/Effectful/FileSystem/PathWriter/: Dynamic.hs
effectful-fs/test/unit/: Main.hs  PathReader.hs  PathWriter.hs  Utils.hs
effectful-ioref/: CHANGELOG.md  effectful-ioref.cabal
effectful-ioref/src/Effectful/: IORef.hs
effectful-ioref/src/Effectful/IORef/: Dynamic.hs
effectful-logger-ns/: CHANGELOG.md  effectful-logger-ns.cabal
effectful-logger-ns/src/Effectful/: LoggerNS.hs
effectful-logger-ns/src/Effectful/LoggerNS/: Dynamic.hs
effectful-logger-ns/test/unit/: Main.hs
effectful-optparse/: effectful-optparse.cabal
effectful-optparse/src/Effectful/: Optparse.hs
effectful-optparse/src/Effectful/Optparse/: Dynamic.hs
effectful-stm/: effectful-stm.cabal
effectful-stm/src/Effectful/: STM.hs
effectful-stm/src/Effectful/Concurrent/: STM.hs
effectful-stm/src/Effectful/Concurrent/STM/: Dynamic.hs
effectful-stm/src/Effectful/Concurrent/STM/TBQueue/: Dynamic.hs
effectful-stm/src/Effectful/Concurrent/STM/TVar/: Dynamic.hs
effectful-thread/: CHANGELOG.md  effectful-thread.cabal
effectful-thread/src/Effectful/: Thread.hs
effectful-thread/src/Effectful/Concurrent/: Thread.hs
effectful-time/: effectful-time.cabal
effectful-time/src/Effectful/: Time.hs
effectful-time/src/Effectful/Time/: Dynamic.hs
effectful-time/test/unit/: Main.hs
effectful-unix-compat/: effectful-unix-compat.cabal
effectful-unix-compat/src/Effectful/PosixCompat/: Dynamic.hs  Static.hs
effectful-unix-compat/src/Effectful/System/: PosixCompat.hs
lib/concurrent-effectful/: CHANGELOG.md  concurrent-effectful.cabal  effectful-concurrent.cabal
lib/concurrent-effectful/src/Effectful/Concurrent/: Dynamic.hs  Static.hs
lib/concurrent-effectful/src/Effectful/Concurrent/MVar/: Utils.hs
lib/concurrent-effectful/src/Effectful/Concurrent/QSem/: Dynamic.hs
lib/concurrent-effectful/src/Effectful/Concurrent/QSemN/: Dynamic.hs
lib/effectful-utils/: effectful-utils.cabal
lib/effectful-utils/src/Effectful/Dynamic/: Utils.hs
lib/env-guard-effectful/: env-guard-effectful.cabal
lib/env-guard-effectful/src/Effectful/Environment/Guard/: Static.hs
lib/environment-effectful/: CHANGELOG.md  environment-effectful.cabal
lib/environment-effectful/src/Effectful/Environment/: Dynamic.hs  Static.hs  Utils.hs
lib/exceptions-effectful/: CHANGELOG.md  effectful-exceptions.cabal  exceptions-effectful.cabal
lib/exceptions-effectful/src/Effectful/: Exception.hs
lib/exceptions-effectful/src/Effectful/Exception/Annotation/: Common.hs  Utils.hs
lib/fs-effectful/: effectful-fs.cabal  fs-effectful.cabal
lib/fs-effectful/bench/: Main.hs  baseline_9.6.csv
lib/fs-effectful/src/Effectful/FileSystem/: Handle.hs  Internal.hs  Path.hs  Utils.hs
lib/fs-effectful/src/Effectful/FileSystem/FileReader/: Dynamic.hs  Static.hs
lib/fs-effectful/src/Effectful/FileSystem/FileWriter/: Dynamic.hs  Static.hs
lib/fs-effectful/src/Effectful/FileSystem/Handle/: Internal.hs
lib/fs-effectful/src/Effectful/FileSystem/HandleRW/: Dynamic.hs  Static.hs
lib/fs-effectful/src/Effectful/FileSystem/HandleReader/: Dynamic.hs  Static.hs
lib/fs-effectful/test/unit/: Main.hs  Misc.hs  PathReader.hs  PathWriter.hs  TestUtils.hs  Utils.hs
lib/fs-effectful/test/unit/Unit/: Misc.hs  PathReader.hs  PathWriter.hs  TestUtils.hs
lib/haskeline-effectful/: haskeline-effectful.cabal
lib/haskeline-effectful/src/Effectful/Haskeline/: Dynamic.hs  Static.hs
lib/ioref-effectful/: CHANGELOG.md  effectful-ioref.cabal  ioref-effectful.cabal
lib/ioref-effectful/src/Effectful/IORef/: Dynamic.hs  Static.hs
lib/logger-effectful/: 1  effectful-logger.cabal  logger-effectful.cabal
lib/logger-effectful/src/Effectful/Logger/: Dynamic.hs  Namespace.hs  Utils.hs
lib/logger-effectful/test/unit/: Main.hs
lib/logger-effectful/test/unit/Unit/: Prelude.hs
lib/logger-ns-effectful/: CHANGELOG.md  effectful-logger-ns.cabal  logger-ns-effectful.cabal
lib/logger-ns-effectful/src/Effectful/LoggerNS/: Dynamic.hs  Static.hs  Utils.hs
lib/logger-ns-effectful/test/unit/: Main.hs
lib/notify-effectful/: CHANGELOG.md  notify-effectful.cabal
lib/notify-effectful/src/Effectful/Notify/: Dynamic.hs  Static.hs
lib/notify-effectful/test/unit/: Main.hs
lib/notify-effectful/test/unit/Unit/: Notify.hs  NotifySystem.hs
lib/optparse-effectful/: CHANGELOG.md  effectful-optparse.cabal  optparse-effectful.cabal
lib/optparse-effectful/src/Effectful/Optparse/: Completer.hs  Dynamic.hs  Static.hs  Utils.hs
lib/terminal-effectful/: CHANGELOG.md  effectful-terminal.cabal  terminal-effectful.cabal
lib/terminal-effectful/src/Effectful/Terminal/: Dynamic.hs  Static.hs  TermSizeException.hs
lib/terminal-effectful/test/unit/: Main.hs
lib/time-effectful/: CHANGELOG.md  effectful-time.cabal  time-effectful.cabal
lib/time-effectful/src/Effectful/Time/: Dynamic.hs  Static.hs  TimeSpec.hs  Utils.hs
lib/time-effectful/test/unit/: Main.hs
lib/typed-process-dynamic-effectful/: CHANGELOG.md  typed-process-dynamic-effectful.cabal
lib/typed-process-effectful/: effectful-typed-process.cabal  typed-process-effectful.cabal
(+374 files in other folders)
