cabal-version:      2.4
name:               effectful-exceptions
version:            0.1
license:            MIT
license-file:       LICENSE
tested-with:        GHC ==8.10.7 || ==9.0.2 || ==9.2.5 || ==9.4.3
copyright:          2022 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/effectful-effects/
bug-reports:        https://github.com/tbidne/effectful-effects/issues
synopsis:           Callstack effects
description:        Callstack effects
category:           Effects
extra-source-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/tbidne/effectful-effects

common common
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    GADTs
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    ScopedTypeVariables
    TypeApplications
    TypeFamilies
    TypeOperators

library
  import:           common
  exposed-modules:  Effectful.Exception
  build-depends:
    , annotated-exception  ^>=0.2.0.4
    , base                 >=4.14.0.0 && <4.18
    , effectful-core       ^>=2.2.1.0

  hs-source-dirs:   src
  default-language: Haskell2010

test-suite unit
  import:           common
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  build-depends:
    , base
    , effectful-core
    , effectful-exceptions
    , filepath              ^>=1.4.2.1
    , tasty                 >=1.1.0.3  && <1.5
    , tasty-golden          ^>=2.3.1.1

  hs-source-dirs:   test/unit
  default-language: Haskell2010
