cabal-version:      2.4
name:               effectful-fs
version:            0.1
license:            MIT
license-file:       LICENSE
tested-with:        GHC ==8.10.7 || ==9.0.2 || ==9.2.4 || ==9.4.2
copyright:          2022 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/effectful-effects/
bug-reports:        https://github.com/tbidne/effectful-effects/issues
synopsis:           FileSystem effects
description:        FileSystem effects
category:           Effects
extra-source-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/tbidne/effectful-effects

common common
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    GADTs
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    ScopedTypeVariables
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

library
  import:           common
  exposed-modules:
    Effectful.FileSystem.FileReader
    Effectful.FileSystem.FileWriter
    Effectful.FileSystem.HandleReader
    Effectful.FileSystem.HandleWriter
    Effectful.FileSystem.Internal
    Effectful.FileSystem.Path
    Effectful.FileSystem.PathReader
    Effectful.FileSystem.PathWriter

  build-depends:
    , base                  >=4.14.0.0  && <4.18
    , bytestring            >=0.10.12.0 && <0.12
    , deepseq               ^>=1.4.4.0
    , directory             ^>=1.3.5.0
    , effectful-core        ^>=2.2.1.0
    , effectful-exceptions  ^>=0.1
    , effectful-ioref       ^>=0.1
    , filepath              >=1.4.2.1   && <1.5
    , optics-core           ^>=0.4
    , text                  >=1.2.4.0   && <2.1
    , time                  >=1.9.3     && <1.14

  hs-source-dirs:   src
  default-language: Haskell2010

test-suite unit
  import:           common
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
    PathReader
    PathWriter
    Utils

  build-depends:
    , base
    , bytestring
    , effectful-core
    , effectful-exceptions
    , effectful-fs
    , effectful-ioref
    , env-guard             ^>=0.2
    , filepath
    , tasty                 >=1.1.0.3 && <1.5
    , tasty-hunit           >=0.9     && <0.11

  hs-source-dirs:   test/unit
  ghc-options:      -threaded -with-rtsopts=-N
  default-language: Haskell2010
