cabal-version:      2.4
name:               effectful-logger-ns
version:            0.1
license:            MIT
license-file:       LICENSE
tested-with:        GHC ==8.10.7 || ==9.0.2 || ==9.2.4 || ==9.4.2
copyright:          2022 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/effectful-effects/
bug-reports:        https://github.com/tbidne/effectful-effects/issues
synopsis:           Adds namespaces to monad-logger
description:        Adds namespaces to monad-logger
category:           Effects
extra-source-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/tbidne/effectful-effects

common common
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    GADTs
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    ScopedTypeVariables
    TypeApplications
    TypeFamilies
    TypeOperators

library
  import:           common
  exposed-modules:  Effectful.LoggerNS
  build-depends:
    , base              >=4.14.0.0  && <4.18
    , bytestring        >=0.10.12.0 && <0.12
    , containers        ^>=0.6.3.1
    , deepseq           ^>=1.4.4.0
    , effectful-core    ^>=2.2.1.0
    , effectful-logger  ^>=0.1
    , effectful-time    ^>=0.1
    , fast-logger       >=2.1       && <3.2
    , optics-core       ^>=0.4
    , optics-th         ^>=0.4
    , template-haskell  >=2.16.0.0  && <2.20
    , text              >=1.2.4.0   && <2.1

  hs-source-dirs:   src
  default-language: Haskell2010

test-suite unit
  import:           common
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  build-depends:
    , base
    , bytestring
    , effectful-callstack         ^>=0.1
    , effectful-core
    , effectful-logger
    , effectful-logger-ns
    , effectful-time
    , filepath                    ^>=1.4.2.1
    , tasty                       >=1.1.0.3  && <1.5
    , tasty-golden                ^>=2.3.1.1
    , text
    , time                        >=1.9.3    && <1.14

  hs-source-dirs:   test/unit
  default-language: Haskell2010
