cabal-version:      2.4
name:               effectful-stm
version:            0.1
license:            MIT
license-file:       LICENSE
tested-with:        GHC ==8.10.7 || ==9.0.2 || ==9.2.4 || ==9.4.2
copyright:          2022 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/effectful-effects/
bug-reports:        https://github.com/tbidne/effectful-effects/issues
synopsis:           STM effects
description:        STM effects
category:           Effects
extra-source-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/tbidne/effectful-effects

common common
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    GADTs
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    ScopedTypeVariables
    TypeApplications
    TypeFamilies
    TypeOperators

library
  import:           common
  exposed-modules:
    Effectful.Concurrent.STM.Dynamic
    Effectful.Concurrent.STM.TBQueue.Dynamic
    Effectful.Concurrent.STM.TVar.Dynamic

  build-depends:
    , base            >=4.14.0.0 && <4.18
    , effectful-core  ^>=2.2.1.0
    , stm             ^>=2.5.0.0

  hs-source-dirs:   src
  default-language: Haskell2010
