cabal-version:   2.4
name:            concurrent-effectful
version:         0.1
license:         MIT
license-file:    LICENSE
tested-with:
  GHC ==9.2.8
   || ==9.4.8
   || ==9.6.7
   || ==9.8.4
   || ==9.10.2
   || ==9.12.2

copyright:       2022-2025 Thomas Bidne
author:          Thomas Bidne
maintainer:      tbidne@protonmail.com
homepage:        https://github.com/tbidne/effectful-libs/
bug-reports:     https://github.com/tbidne/effectful-libs/issues
synopsis:        Thread effects
description:     Provides thread effects
category:        Effects
extra-doc-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/tbidne/effectful-libs

common common-lang
  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    ExplicitNamespaces
    LambdaCase
    MultiWayIf
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    TypeFamilies

  default-language:   GHC2021

library
  import:          common-lang
  exposed-modules: Effectful.Concurrent.Static
  build-depends:
    , base       >=4.16.0.0 && <4.22
    , effectful  >=2.5.0.0  && <2.7

  hs-source-dirs:  src
