cabal-version:      2.4
name:               concurrent-effectful
version:            0.1
license:            MIT
license-file:       LICENSE
tested-with:        GHC ==8.10.7 || ==9.0.2 || ==9.2.4 || ==9.4.2
copyright:          2022 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/effectful-effectsl/
bug-reports:        https://github.com/tbidne/effectful-effectsl/issues
synopsis:           Thread effects
description:        Thread effects
category:           Effects
extra-source-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/tbidne/effectful-effectsl

common common
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    GADTs
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    ScopedTypeVariables
    TypeApplications
    TypeFamilies
    TypeOperators

library
  import:           common
  exposed-modules:
    Effectful.Concurrent.Dynamic
    Effectful.Concurrent.QSem.Dynamic
    Effectful.Concurrent.QSemN.Dynamic

  build-depends:
    , base            >=4.14.0.0 && <4.18
    , effectful-core  ^>=2.2.1.0

  hs-source-dirs:   src
  default-language: Haskell2010
