cabal-version:      2.4
name:               env-guard-effectful
version:            0.1
license:            MIT
license-file:       LICENSE
tested-with:
  GHC ==9.2.8 || ==9.4.8 || ==9.6.5 || ==9.8.2 || ==9.10.1

copyright:          2022-2025 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/effectful-effects/
bug-reports:        https://github.com/tbidne/effectful-effects/issues
synopsis:           Environment effects
description:        Environment effects
category:           Effects
extra-source-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/tbidne/effectful-effects

common common-lang
  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    ExplicitNamespaces
    LambdaCase
    MultiWayIf
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    TypeFamilies

  default-language:   GHC2021

library
  import:          common-lang
  exposed-modules: Effectful.Environment.Guard.Static
  build-depends:
    , base            >=4.16.0.0 && <4.21
    , effectful-core  >=2.5.0.0  && <2.6
    , env-guard       ^>=0.2

  hs-source-dirs:  src
