cabal-version:      2.4
name:               exceptions-effectful
version:            0.1
license:            MIT
license-file:       LICENSE
tested-with:
  GHC ==9.2.8 || ==9.4.8 || ==9.6.5 || ==9.8.2 || ==9.10.1

copyright:          2022-2024 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/effectful-effects/
bug-reports:        https://github.com/tbidne/effectful-effects/issues
synopsis:           Callstack effects
description:        Callstack effects
category:           Effects
extra-source-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/tbidne/effectful-effects

common common-lang
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    GADTs
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    ScopedTypeVariables
    TypeApplications
    TypeFamilies
    TypeOperators

  default-language:   Haskell2010

library
  import:          common-lang
  exposed-modules:
    Effectful.Exception
    Effectful.Exception.Annotation.CallStack.Legacy
    Effectful.Exception.Annotation.Common
    Effectful.Exception.Annotation.Utils

  build-depends:
    , base             >=4.16.0.0 && <4.21
    , containers       >=0.6.3.1  && <0.8
    , deepseq          >=1.4.4.0  && <1.6
    , effectful-core   >=2.2.1.0  && <2.4
    , exceptions       ^>=0.10.4
    , safe-exceptions  ^>=0.1.7.0

  hs-source-dirs:  src
