cabal-version:      2.4
name:               fs-effectful
version:            0.1
license:            MIT
license-file:       LICENSE
tested-with:        GHC ==8.10.7 || ==9.0.2 || ==9.2.4 || ==9.4.2
copyright:          2022 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/effectful-effectsl/
bug-reports:        https://github.com/tbidne/effectful-effectsl/issues
synopsis:           FileSystem effects
description:        FileSystem effects
category:           Effects
extra-source-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/tbidne/effectful-effectsl

common common
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    GADTs
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    ScopedTypeVariables
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

  if os(windows)
    cpp-options: -DWINDOWS

library
  import:           common
  exposed-modules:
    Effectful.FileSystem.FileReader.Dynamic
    Effectful.FileSystem.FileWriter.Dynamic
    Effectful.FileSystem.HandleReader.Dynamic
    Effectful.FileSystem.HandleWriter.Dynamic
    Effectful.FileSystem.Internal
    Effectful.FileSystem.Path
    Effectful.FileSystem.PathReader.Dynamic
    Effectful.FileSystem.PathWriter.Dynamic

  build-depends:
    , base                  >=4.14.0.0  && <4.18
    , bytestring            >=0.10.12.0 && <0.12
    , deepseq               ^>=1.4.4.0
    , directory             ^>=1.3.8.0
    , effectful-core        ^>=2.2.1.0
    , exceptions-effectful  ^>=0.1
    , filepath              >=1.4.100.1 && <1.5
    , ioref-effectful       ^>=0.1
    , optics-core           ^>=0.4
    , text                  >=1.2.4.0   && <2.1
    , time                  >=1.9.3     && <1.14

  hs-source-dirs:   src
  default-language: Haskell2010

test-suite unit
  import:           common
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
    PathReader
    PathWriter
    Utils

  build-depends:
    , base
    , bytestring
    , effectful-core
    , env-guard             ^>=0.2
    , exceptions-effectful
    , filepath
    , fs-effectful
    , ioref-effectful
    , tasty                 >=1.1.0.3 && <1.5
    , tasty-hunit           >=0.9     && <0.11

  hs-source-dirs:   test/unit
  ghc-options:      -threaded -with-rtsopts=-N
  default-language: Haskell2010
